# localchimera

./: .gitignore  .gitmodules  README.md  deploy-inference.sh  motion_video_cloud.py  studio_video_cloud.py  v10_monitor.py  v2_motion_video.py  v3_viral_video.py  v4_rebuild.py  v4_sdxl_viral.py  v5_kling_viral.py  v5_rebuild.py  v6_consistent.py  v6_presenter_viral.py  v7_viral.py  v8_clean.py  v9_realistic.py  view_motion_video.html  view_studio_video.html  view_v10.html  view_v11.html  view_v2.html  view_v3.html  view_v4.html  view_v5.html  view_v6.html  view_v6_consistent.html  view_v7.html  view_v8.html  view_v9.html  viral_video.py  viral_video_comfy.py
.github/workflows/: build-all.yml  build-desktop.yml  build-mobile.yml  check-upstream.yml  deploy-website.yml  test-apk-browserstack.yml  test-apk-cloud.yml  test-apk-firebase.yml  test-apk-lambdatest.yml  test-apk-testingbot.yml  (+1 more)
apps/: README.md
apps/macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos/src-tauri/src/: main.rs
cashu/: README.md
chimera/: .env.example  AIWRITER-INTEGRATION.md  DEPLOYMENT.md  README.md  STELLAR-INTEGRATION.md  build-docker.sh  create_video.py  docker-compose.yml  package.json  test-miners.js  test_bare.mjs  test_completion.mjs  test_cpu_device.mjs  test_events.mjs  test_nostream.mjs  test_predict200.mjs  test_predict50.mjs  test_qvac.mjs  test_server_mirror.mjs  test_wiki_predict10.mjs  test_wiki_predict30.mjs  view_video.html
chimera/backend/rust-project/: Cargo.toml  README.md
chimera/backend/rust-project/docker/: Dockerfile
chimera/backend/rust-project/src/: lib.rs
chimera/backend/rust-project/src/attestation/: mod.rs
chimera/backend/rust-project/src/cli/: mod.rs
chimera/backend/rust-project/src/config/: mod.rs
chimera/backend/rust-project/src/p2p/: mod.rs
chimera/backend/rust-project/src/settlement/: mod.rs
chimera/backend/rust-project/systemd/: qvac-provider.service
contracts/: README.md
contracts-casper/: Cargo.toml  README.md
docs/: INTEGRATION_STATUS.md  UPSTREAM.md  WALLET_AND_EARNINGS_STATUS.md
inference-backend/: README.md
inference-config/: README.md
motion_clips/: concat.txt
providers/: README.md
qvac/: .dockerignore  ARCHITECTURE.md  CONTAINER_COMPATIBILITY.md  DEPLOYMENT.md  Dockerfile  cireeo-video-script.md  config.example.json  config.json  docker-compose.yml  draft-mapping.txt  ecosystem.chimera.cjs  ecosystem.config.cjs  index.html  k8s-deployment.yaml  package.json  player.html  requirements.txt  script.py  start-auto.cmd  start-auto.sh  start-production.sh
releases/: README.md
routstr/: README.md
scripts/: README.md  browserstack-smoke-test.js  deploy-all.mjs  deploy-casper.ts  deploy-updated-contracts.mjs  lambdatest-smoke-test.js  testingbot-smoke-test.js
sdk/: README.md  package.json
studio_frames/: final_concat.txt  scene_00_concat.txt  scene_01_concat.txt  scene_02_concat.txt  scene_03_concat.txt  scene_04_concat.txt  scene_05_concat.txt  scene_06_concat.txt  scene_07_concat.txt  scene_08_concat.txt  scene_09_concat.txt  scene_10_concat.txt  scene_11_concat.txt  scene_12_concat.txt  scene_13_concat.txt  scene_14_concat.txt  scene_15_concat.txt  scene_16_concat.txt  scene_17_concat.txt  scene_18_concat.txt  scene_19_concat.txt  scene_20_concat.txt  scene_21_concat.txt
tools/: download_models.py
v10_clips/: audio_v10_concat.txt  concat_list.txt
v2_clips/: concat.txt  fixed_concat.txt
v3_clips/: v3_concat.txt
v4_clips/: audio_concat.txt  audio_v2_concat.txt  vid_concat.txt
v5_clips/: audio_v5_concat.txt  concat_list.txt
v6_clips/: audio_v6_concat.txt  concat_list.txt
v6_consistent_clips/: audio_v6c_concat.txt  concat_list.txt
v7_clips/: audio_v7_concat.txt  concat_list.txt
v8_clips/: audio_v8_concat.txt  concat_list.txt
v9_clips/: audio_v9_concat.txt  concat_list.txt
website/: demo-wiki.html  earnings.html  index.html
website-new/: README.md  index.html  package.json  tailwind.config.js
(+626 files in other folders)
