[package]
name = "chimera-macos"
version = "1.0.22"
description = "Chimera for macOS - Local AI that earns when idle"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
